tests/ui/resolve/shadow-const-param.stderr
error[E0530]: match bindings cannot shadow const parameters
  --> $DIR/shadow-const-param.rs:7:9
   |
LL | fn foo<const N: i32>(i: i32) -> bool {
   |              - the const parameter `N` is defined here
LL |     match i {
LL |         N @ _ => true,
   |         ^ cannot be named the same as a const parameter

error[E0530]: let bindings cannot shadow const parameters
  --> $DIR/shadow-const-param.rs:13:9
   |
LL | fn bar<const N: i32>(i: i32) -> bool {
   |              - the const parameter `N` is defined here
LL |     let N @ _ = 0;
   |         ^ cannot be named the same as a const parameter

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0530`.
